# minimg

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
cmake/: Android-aarch64.cmake  Android-armv7.cmake  Linux-aarch64.cmake  Linux-armv7.cmake  Linux-armv7hf.cmake
inc/: minimg.h
prebuild/Linux-aarch64/: sample_color  sample_point  sample_rect
prebuild/Linux-armv7hf/: sample_color  sample_point  sample_rect
prebuild/Linux-x86_64/: sample_color  sample_point  sample_rect
sample/: sample_color.cpp  sample_point.cpp  sample_rect.cpp
src/: minimg.cpp
