CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(minimg C CXX)

ADD_DEFINITIONS(-std=c++11)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -W")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -W")

FILE(GLOB_RECURSE samples ${CMAKE_CURRENT_SOURCE_DIR}/sample/sample*.cpp)
FILE(GLOB src ${CMAKE_CURRENT_SOURCE_DIR}/src/minimg.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/inc)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/lib/${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})

#SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g  -fsanitize=address -fno-omit-frame-pointer -fsanitize=leak")

ADD_LIBRARY(minimg SHARED ${src})

FOREACH(sample ${samples})
	GET_FILENAME_COMPONENT(sample_name ${sample}  NAME_WE)
	ADD_EXECUTABLE(${sample_name} ${sample})
	TARGET_LINK_LIBRARIES(${sample_name} minimg libjpeg.a png z)
ENDFOREACH()
